--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html":"5.2.*",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "intervention/image": "dev-master"
+        "intervention/image": "dev-master",
+        "ignited/laravel-omnipay": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
