--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html":"5.2.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "intervention/image": "dev-master",
-        "netshell/paypal": "dev-master"
+        "netshell/paypal": "dev-master",
+        "barryvdh/laravel-debugbar": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
